gitops/envs/free/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parasol-free
  labels:
    parasol.example/environment: free
